--- a/cv-project/src/styles/Overview.css
+++ b/cv-project/src/styles/Overview.css
@@ -13,3 +13,55 @@
 .experienceElement:hover button {
     display: block;
 }
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.education-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.schoolElement {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.experience-container {
+    margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.experienceElement {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.CV-Name {
+    font-size: 26px;
+    margin: 1rem 0;
+}
+
+.CV-Summary {
+    margin: 1rem 0;
+}
+
+.CV-Phone {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+}
+
+.CV-Email {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+}
