--- a/cv-project/src/styles/App.css
+++ b/cv-project/src/styles/App.css
@@ -24,3 +24,111 @@ p {
 .downArrow {
     transform: rotate(90deg);
 }
+
+.basic-information {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    margin: 1rem 0;
+}
+
+.education {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+    margin-top: 0.3rem;
+}
+.addEducation {
+    padding: 1rem;
+    width: 70%;
+    border: none;
+    border-radius: 2rem;
+    align-self: center;
+    margin-top: 0.7rem;
+    background-color: #2ec27e;
+    font-size: 16px;
+    font-weight: 500;
+}
+.showEducation {
+    background-color: unset;
+    border: none;
+    width: 30px;
+}
+
+.experience {
+    display: flex;
+    flex-direction: column;
+}
+.showExperience {
+    width: 30px;
+    background-color: unset;
+    border-style: none;
+}
+
+.schoolElement button {
+    display: none;
+}
+
+.schoolElement:hover button {
+    display: block;
+}
+
+.experienceElement button {
+    display: none;
+}
+
+.experienceElement:hover button {
+    display: block;
+}
+
+.contact {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.education-container {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.schoolElement {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.experience-container {
+    margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.experienceElement {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.CV-Name {
+    font-size: 26px;
+    margin: 1rem 0;
+}
+
+.CV-Summary {
+    margin: 1rem 0;
+}
+
+.CV-Phone {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+}
+
+.CV-Email {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+}
