--- a/cv-project/src/styles/App.css
+++ b/cv-project/src/styles/App.css
@@ -132,3 +132,15 @@ p {
     align-items: center;
     gap: 3px;
 }
+
+.editModal {
+    background-color: #2ec27e;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
