--- a/cv-project/src/styles/App.css
+++ b/cv-project/src/styles/App.css
@@ -150,26 +150,29 @@ p {
     width: 218px;
 }
 
+#achievmentsInput:focus {
+    outline: none;
+    border-bottom: 2px solid #2ec27e;
+}
+
+#experienceAchievmentsEdit {
+    border: none;
+    resize: none;
+    border-bottom: 1px solid #000;
+    padding: 0.5rem;
+    padding-bottom: 2rem;
+    width: 218px;
+}
+
+#experienceAchievmentsEdit:focus {
+    outline: none;
+    border-bottom: 2px solid #2ec27e;
+}
+
 .showExperience {
     width: 30px;
     background-color: unset;
     border-style: none;
-}
-
-.schoolElement button {
-    display: none;
-}
-
-.schoolElement:hover button {
-    display: block;
-}
-
-.experienceElement button {
-    display: none;
-}
-
-.experienceElement:hover button {
-    display: block;
 }
 
 .contact {
@@ -178,16 +181,64 @@ p {
     gap: 1rem;
 }
 
+.removeEducationElem {
+    padding: 0.5rem 0;
+    background-color: #ad380a;
+    border: none;
+    font-weight: 600;
+    border-radius: 1rem;
+    color: #cccccb;
+}
+
+.editEducationElem {
+    padding: 0.5rem 0;
+    background-color: #2ec27e;
+    border-radius: 1rem;
+    border-style: none;
+    font-weight: 600;
+}
+
+.line {
+    border: 1px solid #cccccb;
+    margin: 0.5rem 0;
+}
+
+.editExperienceElem {
+    padding: 0.5rem 0;
+    background-color: #2ec27e;
+    border-radius: 1rem;
+    border-style: none;
+    font-weight: 600;
+}
+
+.removeExperienceElem {
+    padding: 0.5rem 0;
+    background-color: #ad380a;
+    border: none;
+    font-weight: 600;
+    border-radius: 1rem;
+    color: #cccccb;
+}
+
 .education-container {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
+.education-container p {
+    font-size: 26px;
+}
+
+.experience-container p {
+    font-size: 26px;
+}
+
 .schoolElement {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    color: #939197;
 }
 
 .experience-container {
@@ -197,10 +248,25 @@ p {
     gap: 1rem;
 }
 
+.CV-educationTitle {
+    color: #d46c2c;
+    font-weight: 600;
+}
+
+.CV-experiencePosition {
+    color: #d46c2c;
+    font-weight: 600;
+}
+
+.CV-Summary {
+    max-width: 308px;
+}
+
 .experienceElement {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+    color: #939197;
 }
 
 .CV-Name {
@@ -225,7 +291,7 @@ p {
 }
 
 .editModal {
-    background-color: #2ec27e;
+    background-color: #000000b0;
     position: fixed;
     top: 0;
     left: 0;
@@ -234,4 +300,23 @@ p {
     width: 100%;
     display: flex;
     align-items: center;
+    justify-content: center;
+}
+
+.editModal form {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    background-color: #fff;
+    padding: 1rem;
+    border-radius: 1rem;
+    color: #000;
+}
+
+.editModal form button {
+    padding: 0.5rem;
+    background-color: #2ec27e;
+    font-weight: 600;
+    border: none;
+    border-radius: 1rem;
 }
